# oxicast

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflow/: build.yml
.github/workflows/: build.yml  rust.yml
src/: feed_generator.rs  main.rs  network.rs  server.rs
