[package]
name = "oxicast"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
id3 = "1.16.3"
local-ip-address = "0.6.5"
rss = "2.0.12"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
urlencoding = "2.1.3"
walkdir = "2.5.0"
